# ratbeam

./: Cargo.toml  LICENSE  README.md
examples/demo/: Cargo.toml
examples/demo/src/: main.rs
examples/wave-interference/: Cargo.toml
examples/wave-interference/data/: hack-10pt.atlas
examples/wave-interference/src/: main.rs  wave_effect.rs
src/: backend.rs  color.rs  error.rs  lib.rs
