[package]
name = "ratbeam"
version = "0.1.0"
edition = "2024"
description = "A ratatui backend using beamterm-core for rendering"
license = "MIT"
authors = ["Adrian Papari <junkdog@angelhill.net>"]
repository = "https://github.com/junkdog/ratbeam"
homepage = "https://github.com/junkdog/ratbeam"
keywords = ["terminal", "ratatui", "backend", "opengl", "gpu"]
categories = ["graphics", "rendering"]

[dependencies]
beamterm-core = "0.16.0"
beamterm-data = "0.16.0"
ratatui = "0.30.0"
glow = "0.16"
thiserror = "2.0"

[workspace]
members = ["examples/demo", "examples/wave-interference"]

[profile.dev.package."demo"]
opt-level = 2

[profile.dev.package."wave-interference"]
opt-level = 2
